--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
-    <link href='css/style.css' rel='stylesheet' type='text/css'>
+    <link href='/stylesheets/stylesheet.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <section class='container'>
@@ -26,13 +26,13 @@
     </footer>
     <script src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js' type='text/javascript'></script>
     <script src='//netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js' type='text/javascript'></script>
-    <script type='text/javascript'>
+    <script type="text/javascript">
       var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
       document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-      </script>
-      <script type="text/javascript">
+    </script>
+    <script type="text/javascript">
       try {
-      var pageTracker = _gat._getTracker("UA-46141487-1");
+        var pageTracker = _gat._getTracker("UA-46141487-1");
       pageTracker._trackPageview();
       } catch(err) {}
     </script>
