--- a/_src/haml/default.haml
+++ b/_src/haml/default.haml
@@ -15,7 +15,7 @@
   <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
   <![endif]-->
 
-  %link(rel="stylesheet" type="text/css" href="css/style.css")
+  %link(rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css")
  %body
   %section.container
    {{content}}
@@ -24,12 +24,3 @@
     %p#copyrights Copyrights 2013 Matrixfox.com
   %script(type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js")
   %script(type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js")
-  %script(type="text/javascript")
-   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-   document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-   </script>
-   <script type="text/javascript">
-   try {
-   var pageTracker = _gat._getTracker("UA-46141487-1");
-   pageTracker._trackPageview();
-   } catch(err) {}
