--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <meta content='' name='description'>
     <meta content='' name='author'>
-    <title>Tader Boilerplate{% if page.title }%} - {{page.title}}{% endif %}</title>
+    <title>Matrixfox{% if page.title }%} - {{page.title}}{% endif %}</title>
     <link href='//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -17,13 +17,38 @@
   </head>
   <body>
     <section class='container'>
+      <!-- NAVBAR
+      ================================================== -->
+      <nav class="navbar navbar-matrix" role="navigation">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <h1 class="navbar-brand">Matrixfox</h1><br><span class="motto">Responsive Designer</span>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+
+          <ul class="nav navbar-nav navbar-right">
+            <li class="home"><a href="/">Home<br><span>Portfolio Page</span></a></li>
+            <li class="feed"><a href="/">Feed<br><span>Read About My Adventures</span></a></li>
+            <li class="contact"><a href="/">Contact<br><span>Keep and Stay in Touch</span></a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </nav>
+      <!-- NAVBAR END -->
       {{content}}
+      <footer>
+        <p class='pull-right'><a class="backtotop" href='#'>Back to top <span class="glyphicon glyphicon-arrow-up"></span></a></p>
+        <small>&copy; <a href="#">Matrixfox</a> 2013</small>
+      </footer>
+      <!-- /END CONTAINER -->
     </section>
-    <footer>
-      <noscript>
-        <p id='copyrights'>Copyrights 2013 Matrixfox.com</p>
-      </noscript>
-    </footer>
     <script src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js' type='text/javascript'></script>
     <script src='//netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js' type='text/javascript'></script>
     <script type="text/javascript">
