--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,479 +1,367 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+@charset "utf-8";
+/* Override Hosted Cascading Style Sheets */
+.navbar-brand {
+  padding: 0px 0px;
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+.navbar {
+  margin-bottom: 0px;
+  border: 0px solid transparent;
 }
+button:focus {
+  outline: -webkit-focus-ring-color none;
+}
+@media (min-width: 768px) {
+  .navbar {
+    border-radius: 0px;
+  }
+}
+.navbar-collapse {
+  padding-right: 0px;
+  padding-left: 0px;
+}
+@media (min-width: 768px) {
+  .navbar-collapse .navbar-nav.navbar-right:last-child {
+    margin-right: 0px;
+  }
+}
+.row {
+  margin-right: 0px;
+  margin-left: 0px;
+}
+h1,
+h2,
+h3 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+p {
+  margin: 0 0 0px;
+}
+.col-xs-1,
+.col-sm-1,
+.col-md-1,
+.col-lg-1,
+.col-xs-2,
+.col-sm-2,
+.col-md-2,
+.col-lg-2,
+.col-xs-3,
+.col-sm-3,
+.col-md-3,
+.col-lg-3,
+.col-xs-4,
+.col-sm-4,
+.col-md-4,
+.col-lg-4,
+.col-xs-5,
+.col-sm-5,
+.col-md-5,
+.col-lg-5,
+.col-xs-6,
+.col-sm-6,
+.col-md-6,
+.col-lg-6,
+.col-xs-7,
+.col-sm-7,
+.col-md-7,
+.col-lg-7,
+.col-xs-8,
+.col-sm-8,
+.col-md-8,
+.col-lg-8,
+.col-xs-9,
+.col-sm-9,
+.col-md-9,
+.col-lg-9,
+.col-xs-10,
+.col-sm-10,
+.col-md-10,
+.col-lg-10,
+.col-xs-11,
+.col-sm-11,
+.col-md-11,
+.col-lg-11,
+.col-xs-12,
+.col-sm-12,
+.col-md-12,
+.col-lg-12 {
+  padding-right: 0px;
+  padding-left: 0px;
+}
+.thumbnail {
+  padding: 0px;
+  margin-bottom: 0px;
+  border: 0px solid #ddd;
+  border-radius: 0px;
+}
+/* Main Style Sheet */
+@font-face {
+  font-family: 'titilliumregular';
+  src: url('http://matrixfox.com/fonts/titillium-regular-webfont.eot');
+  src: url('http://matrixfox.com/fonts/titillium-regular-webfont.eot?#iefix') format('embedded-opentype'), url('http://matrixfox.com/fonts/titillium-regular-webfont.woff') format('woff'), url('http://matrixfox.com/fonts/titillium-regular-webfont.ttf') format('truetype'), url('http://matrixfox.com/fonts/titillium-regular-webfont.svg#titilliumregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+/*
+ *
+ * Home / Portfolio
+ *
+ */
 body {
-	line-height: 1;
+  background: url('http://matrixfox.com/images/stressed_linen.png') center center;
+  background-color: #000;
+  color: #fff;
+  word-wrap: break-word;
 }
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-/* LAYOUT STYLES */
-body {
-  font-size: 15px;
-  line-height: 1.5; 
-  background: #fafafa url(../images/body-bg.jpg) 0 0 repeat;
-  font-family: 'Helvetica Neue', Helvetica, Arial, serif;
-  font-weight: 400;
-  color: #666;
-}
-
 a {
-  color: #2879d0;
+  color: #f21d2f;
 }
 a:hover {
-  color: #2268b2;
-}
-
-header {
-  padding-top: 40px;
-  padding-bottom: 40px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; 
-  background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x;
-  border-bottom: solid 1px #275da1;
-}
-
-header h1 {
-  letter-spacing: -1px;
-  font-size: 72px;
   color: #fff;
-  line-height: 1;
-  margin-bottom: 0.2em;
-  width: 540px;
-}
-
-header h2 {
-  font-size: 26px;
-  color: #9ddcff;
-  font-weight: normal;
-  line-height: 1.3;
-  width: 540px;
-  letter-spacing: 0;
-}
-
-.inner {
-  position: relative;
-  width: 940px;
-  margin: 0 auto;
-}
-
-#content-wrapper {
-  border-top: solid 1px #fff;
-  padding-top: 30px;
-}
-
-#main-content {
-  width: 690px;
-  float: left;
-}
-
-#main-content img {
-  max-width: 100%;
-}
-
-aside#sidebar {
-  width: 200px;
-  padding-left: 20px;
-  min-height: 504px;
-  float: right;
-  background: transparent url(../images/sidebar-bg.jpg) 0 0 no-repeat;
-  font-size: 12px;
-  line-height: 1.3;
-}
-
-aside#sidebar p.repo-owner,
-aside#sidebar p.repo-owner a {
-  font-weight: bold;
-}
-
-#downloads {
-  margin-bottom: 40px;
-}
-
-a.button {
-  width: 134px;
-  height: 58px;
-  line-height: 1.2;
-  font-size: 23px;
-  color: #fff;
-  padding-left: 68px;
-  padding-top: 22px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; 
-}
-a.button small {
-  display: block;
-  font-size: 11px;
-}
-header a.button {
-  position: absolute;
-  right: 0;
-  top: 0;
-  background: transparent url(../images/github-button.png) 0 0 no-repeat;
-}
-aside a.button {
-  width: 138px;
-  padding-left: 64px;
-  display: block;
-  background: transparent url(../images/download-button.png) 0 0 no-repeat;
-  margin-bottom: 20px;
-  font-size: 21px;
-}
-
-code, pre {
-  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-  color: #222;
-  margin-bottom: 30px;
-  font-size: 13px;
-}
-
-code {
-  background-color: #f2f8fc;
-  border: solid 1px #dbe7f3;
-  padding: 0 3px;
-}
-
-pre {
-  padding: 20px;
-  background: #fff;
-  text-shadow: none;
-  overflow: auto;
-  border: solid 1px #f2f2f2;
-}
-pre code {
-  color: #2879d0;
-  background-color: #fff;
-  border: none;
-  padding: 0;
-}
-
-ul, ol, dl {
-  margin-bottom: 20px;
-}
-
-
-/* COMMON STYLES */
-
-hr {
-  height: 1px;
-  line-height: 1px;
-  margin-top: 1em;
-  padding-bottom: 1em;
-  border: none;
-  background: transparent url('../images/hr.png') 0 0 no-repeat;
-}
-
-table {
-  width: 100%;
-  border: 1px solid #ebebeb;
-}
-
-th {
-  font-weight: 500;
-}
-
-td {
-  border: 1px solid #ebebeb;
-  text-align: center; 
-  font-weight: 300;
-}
-
-form {
-  background: #f2f2f2;
-  padding: 20px;
-  
-}
-
-
-/* GENERAL ELEMENT TYPE STYLES */
-
-#main-content h1 {
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; 
-  font-size: 2.8em;
-  letter-spacing: -1px;
-  color: #474747;
-} 
-
-#main-content h1:before {
-  content: "/";
-  color: #9ddcff;
-  padding-right: 0.3em;
-  margin-left: -0.9em;
-}
-
-#main-content h2 {
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; 
-  font-size: 22px;
-  font-weight: bold;
-  margin-bottom: 8px;
-  color: #474747;
-} 
-#main-content h2:before {
-  content: "//";
-  color: #9ddcff;
-  padding-right: 0.3em;
-  margin-left: -1.5em;
-}
-
-#main-content h3 {
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; 
-  font-size: 18px;
-  font-weight: bold;
-  margin-top: 24px;
-  margin-bottom: 8px;
-  color: #474747;
-} 
- 
-#main-content h3:before {
-  content: "///";
-  color: #9ddcff;
-  padding-right: 0.3em;
-  margin-left: -2em;
-}
-
-#main-content h4 {
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; 
-  font-size: 15px;
-  font-weight: bold;
-  color: #474747;
-} 
-
-h4:before {
-  content: "////";
-  color: #9ddcff;
-  padding-right: 0.3em;
-  margin-left: -2.8em;
-}
-
-#main-content h5 {
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; 
-  font-size: 14px;
-  color: #474747;
-} 
-h5:before {
-  content: "/////";
-  color: #9ddcff;
-  padding-right: 0.3em;
-  margin-left: -3.2em;
-}
-
-#main-content h6 {
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; 
-  font-size: .8em;
-  color: #474747;
-} 
-h6:before {
-  content: "//////";
-  color: #9ddcff;
-  padding-right: 0.3em;
-  margin-left: -3.7em;
-}
-
-p {
-  margin-bottom: 20px;
-}
- 
-a {
   text-decoration: none;
 }
-
-p a {
-  font-weight: 400;
+/*
+ * Navbar
+ *
+ */
+.navbar-matrix {
+  font-family: 'titilliumregular', sans-serif;
+  text-transform: uppercase;
+  border-bottom: 1px solid #eeeeee;
+  margin-top: 30px;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
-
-blockquote {
-  font-size: 1.6em;
-  border-left: 10px solid #e9e9e9;
+.navbar-matrix a {
+  color: #fff;
+}
+/* logo */
+.navbar-header span {
+  color: #f21d2f;
+  font-size: 2.4em;
+}
+.navbar-brand {
+  font-family: 'titilliumregular', sans-serif;
+  font-size: 2.4em;
+}
+/* Mobile Toggle Button */
+.navbar-toggle {
+  border: 1px solid rgba(100, 100, 100, 0.4);
+  margin-right: 0;
+}
+.navbar-toggle span {
+  background-color: #f21d2f;
+}
+.active a {
+  color: #f21d2f;
+}
+.nav li span {
+  display: none !important;
+}
+.nav > li > a:hover,
+.nav > li > a:focus {
+  background-color: rgba(100, 0, 0, 0.8);
+}
+@media screen and (min-width: 768px) {
+  /* bootstrap reset */
+  .nav > li > a {
+    padding: 0px 0px;
+  }
+  .nav > li > a:hover,
+  .nav > li > a:focus {
+    background-color: rgba(0, 0, 0, 0);
+    color: #f21d2f;
+  }
+  /*start media querie */
+  .nav li {
+    text-align: right;
+    margin-left: 28px;
+    font-size: 1.4em;
+  }
+  .nav li span {
+    max-width: 100px;
+    font-size: 0.5em;
+    display: inherit !important;
+    color: #fff;
+  }
+  /* end .nav */
+}
+/*
+ *
+ * Jumbotron
+ *
+ */
+h4 {
+  font-family: 'titilliumregular', sans-serif;
+  text-transform: uppercase;
+}
+h4 span {
+  color: #f21d2f;
+}
+.jumbotron {
+  position: relative;
+  background: none;
+  padding: 0px;
+  margin: 0px;
+  height: 440px;
+  color: #fff;
+}
+.jumbotron:after {
+  content: "";
+  background: url('http://matrixfox.com/images/matrixfox-greendesign-featured.jpg') no-repeat 44% 100%;
+  -webkit-background-size: cover;
+  /* Causes Resizing 1px Left Border deal with it or find hack */
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+}
+/*
+ * BANNER
+ *
+ */
+.banner {
+  background-color: #f21d2f;
+}
+.banner h2 {
+  color: #000;
+  text-transform: uppercase;
+  font-family: 'titilliumregular', sans-serif;
+}
+.banner h2 span {
+  color: #fff;
+}
+.banner-inner {
+  padding: 20px;
+}
+.btn-default {
   margin-bottom: 20px;
-  padding: 0 0 0 30px;
+  color: #fff;
+  background-color: #000;
+  border-color: #cccccc;
 }
-
-ul {
-  list-style: disc inside;
-  padding-left: 20px;
+.btn-default:hover,
+.btn-default:focus,
+.btn-default:active,
+.btn-default.active,
+.open .dropdown-toggle.btn-default {
+  color: #000;
+  background-color: #fff;
 }
-
-ol {
-  list-style: decimal inside;
-  padding-left: 3px;
+.btn-default:hover span,
+.btn-default:focus span,
+.btn-default:active span,
+.btn-default.active span,
+.open .dropdown-toggle.btn-default span {
+  color: black;
 }
-
-dl dd {
-  font-style: italic;
-  font-weight: 100;
+@media screen and (min-width: 1199px) {
+  .btn-default {
+    margin-top: 38px;
+  }
 }
-
+/*
+ * Portfolio
+ *
+ */
+.portfolio {
+  position: relative;
+  overflow: hidden;
+}
+.overlay {
+  position: absolute;
+  top: 100%;
+  margin: 0;
+  padding: 10px;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  font-family: arial;
+  text-align: center;
+  transition: all 0.2s ease-in-out;
+}
+.portfolio:hover img {
+  /*  -webkit-filter: contrast(3) grayscale(1); causes chrome/safrai hover flicker */
+  transform: scale(1.1) rotate(2deg);
+}
+.portfolio:hover .overlay {
+  top: 0;
+}
+/* fix portfolio overlay thumbnail resizing */
+@media screen and (max-width: 1199px) {
+  .portfolio {
+    max-height: 176px;
+  }
+}
+@media screen and (max-width: 991px) {
+  .portfolio {
+    max-height: 270px;
+  }
+}
+/*
+ *
+ * Footer
+ *
+ */
 footer {
-  background: transparent url('../images/hr.png') 0 0 no-repeat;
-  margin-top: 40px;
-  padding-top: 20px;
-  padding-bottom: 30px;
-  font-size: 13px;
-  color: #aaa;
-}
-
-footer a {
-  color: #666;
-}
-footer a:hover {
-  color: #444;
-}
-
-/* MISC */
-.clearfix:after {
   clear: both;
-  content: '.';
-  display: block;
-  visibility: hidden;
-  height: 0;
+  border-top: 1px solid #fff;
+  padding-top: 20px;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
-
-.clearfix {display: inline-block;}
-* html .clearfix {height: 1%;}
-.clearfix {display: block;}
-
-/* #Media Queries
-================================================== */
-
-/* Smaller than standard 960 (devices and browsers) */
-@media only screen and (max-width: 959px) {}
-
-/* Tablet Portrait size to standard 960 (devices and browsers) */
-@media only screen and (min-width: 768px) and (max-width: 959px) {
-  .inner {
-    width: 740px;
-  }
-  header h1, header h2 {
-    width: 340px;
-  }
-  header h1 {
-    font-size: 60px;
-  }
-  header h2 {
-    font-size: 30px;
-  }
-  #main-content {
-    width: 490px;
-  }
-  #main-content h1:before,
-  #main-content h2:before,
-  #main-content h3:before,
-  #main-content h4:before,
-  #main-content h5:before,
-  #main-content h6:before {
-    content: none;
-    padding-right: 0;
-    margin-left: 0;
-  }
+footer small,
+footer p:nth-child(1) {
+  text-transform: uppercase;
+  color: #777;
 }
-
-/* All Mobile Sizes (devices and browser) */
-@media only screen and (max-width: 767px) {
-  .inner {
-    width: 93%;
-  }
-  header {
-    padding: 20px 0;
-  }
-  header .inner {
-    position: relative;
-  }
-  header h1, header h2 {
-    width: 100%;
-  }
-  header h1 {
-    font-size: 48px;
-  }
-  header h2 {
-    font-size: 24px;
-  }
-  header a.button {
-    background-image: none;
-    width: auto;
-    height: auto;
-    display: inline-block;
-    margin-top: 15px;
-    padding: 5px 10px;
-    position: relative;
-    text-align: center;
-    font-size: 13px;
-    line-height: 1;
-    background-color: #9ddcff;
-    color: #2879d0;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;                     
-    border-radius: 5px;    
-  }
-  header a.button small {
-    font-size: 13px;
-    display: inline;
-  }
-  #main-content,
-  aside#sidebar {
-    float: none;
-    width: 100% ! important;
-  }
-  aside#sidebar {
-    background-image: none;
-    margin-top: 20px;
-    border-top: solid 1px #ddd;
-    padding: 20px 0;
-    min-height: 0;
-  }
-  aside#sidebar a.button {
-    display: none;
-  }
-  #main-content h1:before,
-  #main-content h2:before,
-  #main-content h3:before,
-  #main-content h4:before,
-  #main-content h5:before,
-  #main-content h6:before {
-    content: none;
-    padding-right: 0;
-    margin-left: 0;
-  }
+/*
+ *
+ * Blog
+ *
+ */
+.tweets {
+  padding-bottom: 10px;
 }
-
-/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
-@media only screen and (min-width: 480px) and (max-width: 767px) {}
-
-/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
-@media only screen and (max-width: 479px) {}
+.tweets figcaption {
+  padding-top: 10px;
+  padding-left: 10px;
+}
+.lastfm h5 {
+  font-family: 'titilliumregular', sans-serif;
+  text-transform: uppercase;
+  font-size: 1.3em;
+  margin-left: 10px;
+}
+/*
+ * Top Artists
+ *
+ */
+.lastfm-top {
+  clear: both;
+}
+.lastfm-top .row {
+  margin-bottom: 20px;
+  border-top: 1px solid #777;
+}
+.lastfm-top h5 {
+  font-family: 'titilliumregular', sans-serif;
+  text-transform: uppercase;
+  font-size: 1.3em;
+}
+.glyphicon-music {
+  font-size: 0.8em;
+}
+/* iPhone Media Queries */
+/* iPad Media Queries */
+/* Desktop Media Queries */
