--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta content='IE=edge' http-equiv='X-UA-Compatible'>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
-    <meta content='' name='description'>
+    <meta content='{{page.meta}}' name='description'>
     <meta content='' name='author'>
     <title>Matrixfox{% if page.title }%} - {{page.title}}{% endif %}</title>
     <link href='//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
@@ -35,9 +35,9 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
 
           <ul class="nav navbar-nav navbar-right">
-            <li class="home"><a href="/">Home<br><span>Portfolio Page</span></a></li>
+            <li class="home {% if page.url == '/' %}active{% endif %}"><a href="/">Home<br><span>Portfolio Page</span></a></li>
             <li class="feed"><a href="/">Feed<br><span>Read About My Adventures</span></a></li>
-            <li class="contact"><a href="/">Contact<br><span>Keep and Stay in Touch</span></a></li>
+            <li class="contact {% if page.url == '/contact/' %}active{% endif %}"><a href="/contact/">Contact<br><span>Keep and Stay in Touch</span></a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </nav>
