--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
     </section>
     <script src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js' type='text/javascript'></script>
     <script src='//netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js' type='text/javascript'></script>
-    <script src='/javascripts/script-ck.js' type='text/javascript'></script>
+    <script src='/javascripts/main-ck.js' type='text/javascript'></script>
     <script type="text/javascript">
       var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
       document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
