--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 
           <ul class="nav navbar-nav navbar-right">
             <li class="home {% if page.url == '/' %}active{% endif %}"><a href="/">Home<br><span>Portfolio Page</span></a></li>
-            <li class="feed"><a href="/">Feed<br><span>Read About My Adventures</span></a></li>
+            <li class="blog {% if page.url == '/blog/' %}active{% endif %}"><a href="/blog/">Blog<br><span>Read About My Adventures</span></a></li>
             <li class="contact {% if page.url == '/contact/' %}active{% endif %}"><a href="/contact/">Contact<br><span>Keep and Stay in Touch</span></a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -45,22 +45,11 @@
       {{content}}
       <footer>
         <p class='pull-right'><a class="backtotop" href='#'>Back to top <span class="glyphicon glyphicon-arrow-up"></span></a></p>
-        <small>&copy; <a href="#">Matrixfox</a> 2013</small>
+        <small>&copy; <a href="https://github.com/matrixfox">Matrixfox</a> 2013</small>
       </footer>
       <!-- /END CONTAINER -->
     </section>
     <script src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js' type='text/javascript'></script>
     <script src='//netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js' type='text/javascript'></script>
-    <script src='/javascripts/main-ck.js' type='text/javascript'></script>
-    <script type="text/javascript">
-      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-    </script>
-    <script type="text/javascript">
-      try {
-        var pageTracker = _gat._getTracker("UA-46141487-1");
-      pageTracker._trackPageview();
-      } catch(err) {}
-    </script>
   </body>
 </html>
