--- a/_src/less/main.less
+++ b/_src/less/main.less
@@ -21,7 +21,9 @@
 
 
 
-
+h2 {
+  padding-bottom: 10px;
+}
 
 
 
@@ -36,7 +38,7 @@
  *
  */
 body {
-  background: url('http://matrixfox.com/images/stressed_linen.png') center center;
+  background: url('/images/stressed_linen.png') center center;
   background-color: #000;
   color: #fff;
   word-wrap:break-word;
@@ -204,7 +206,7 @@ span {
  }
  .jumbotron:after {
   content:"";
-  background: url('http://matrixfox.com/images/matrixfox-greendesign-featured.jpg') no-repeat 44% 100%;
+  background: url('/images/matrixfox-greendesign-featured.jpg') no-repeat 44% 100%;
   -webkit-background-size: cover;/* Causes Resizing 1px Left Border deal with it or find hack */
   -moz-background-size: cover;
   -o-background-size: cover;
