--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -102,13 +102,16 @@ p {
   font-weight: normal;
   font-style: normal;
 }
+h2 {
+  padding-bottom: 10px;
+}
 /*
  *
  * Home / Portfolio
  *
  */
 body {
-  background: url('http://matrixfox.com/images/stressed_linen.png') center center;
+  background: url('/images/stressed_linen.png') center center;
   background-color: #000;
   color: #fff;
   word-wrap: break-word;
@@ -211,7 +214,7 @@ h4 span {
 }
 .jumbotron:after {
   content: "";
-  background: url('http://matrixfox.com/images/matrixfox-greendesign-featured.jpg') no-repeat 44% 100%;
+  background: url('/images/matrixfox-greendesign-featured.jpg') no-repeat 44% 100%;
   -webkit-background-size: cover;
   /* Causes Resizing 1px Left Border deal with it or find hack */
   -moz-background-size: cover;
