--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
   <head>
-    <meta charset='utf-8'>
-    <meta content='IE=edge' http-equiv='X-UA-Compatible'>
-    <meta content='width=device-width, initial-scale=1.0' name='viewport'>
-    <meta content='{{page.meta}}' name='description'>
-    <meta content='' name='author'>
+    <meta charset="utf-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="{{page.meta}}" name="description">
+    <meta content="" name="author">
     <title>Matrixfox{% if page.title }%} - {{page.title}}{% endif %}</title>
-    <link href='//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
-    <link href='/stylesheets/stylesheet.css' rel='stylesheet' type='text/css'>
+    <link href="/stylesheets/stylesheet.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <section class='container'>
+    <section class="container">
       <!-- NAVBAR
       ================================================== -->
       <nav class="navbar navbar-matrix" role="navigation">
@@ -44,12 +44,12 @@
       <!-- NAVBAR END -->
       {{content}}
       <footer>
-        <p class='pull-right'><a class="backtotop" href='#'>Back to top <span class="glyphicon glyphicon-arrow-up"></span></a></p>
+        <p class="pull-right"><a class="backtotop" href="#">Back to top <span class="glyphicon glyphicon-arrow-up"></span></a></p>
         <small>&copy; <a href="https://github.com/matrixfox">Matrixfox</a> 2013</small>
       </footer>
       <!-- /END CONTAINER -->
     </section>
-    <script src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js' type='text/javascript'></script>
-    <script src='//netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js' type='text/javascript'></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js" type="text/javascript"></script>
   </body>
 </html>
