--- a/_src/less/main.less
+++ b/_src/less/main.less
@@ -178,7 +178,9 @@ li span {
 
 
 
-
+@media screen and (max-width: 991px) {
+.navbar-header span {font-size: 2em;}
+}
 
 
 /*
@@ -275,7 +277,7 @@ span {
 
 
 
-@media screen and (min-width: 1199px) {
+@media screen and (min-width: 1200px) {
 .btn-default {
   margin-top: 38px;
 }
@@ -367,46 +369,26 @@ small, p:nth-child(1) {
  * Blog
  *
  */
-.tweets {
-  padding-bottom: 10px;
+figcaption a {
+display:inline-block;
+}
+.post {
+  border-top: 1px solid #777;
 }
 
-.tweets figcaption {
-  padding-top: 10px;
-  padding-left: 10px;
-}
-
-.lastfm h5 {
-  font-family: 'titilliumregular',sans-serif;
-  text-transform:uppercase;
-  font-size: 1.3em;
-  margin-left: 10px;
-}
 
 
 
 
 /*
- * Top Artists
+ *
+ * 404
  *
  */
-.lastfm-top  {
-  clear:both;
-
-.row {
-  margin-bottom: 20px;
-  border-top: 1px solid #777;
+.four04 {
+img {max-width: 100%;}
+h1, .h1 {
+font-size: 8em;
 }
-
-h5 {
-  font-family: 'titilliumregular',sans-serif;
-  text-transform:uppercase;
-  font-size: 1.3em;
-}
-}
-
-
-.glyphicon-music {
-  font-size: 0.8em;
 }
 
