Uploading Old New Blog

--- a/_src/less/main.less
+++ b/_src/less/main.less
@@ -374,7 +374,33 @@ display:inline-block;
 }
 .post {
   border-top: 1px solid #777;
+  margin-top: 20px;
 }
+
+
+
+
+
+
+
+table { 
+  width: 100%; 
+  border-collapse: collapse; 
+}
+tr:nth-of-type(odd) { 
+  background: @red; 
+}
+th { 
+  background: #333; 
+  color: white; 
+  font-weight: bold; 
+}
+td, th { 
+  padding: 6px; 
+  border: 1px solid #ccc; 
+  text-align: left; 
+}
+
 
 
 
