--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -94,6 +94,9 @@ p {
   border: 0px solid #ddd;
   border-radius: 0px;
 }
+code {
+  white-space: normal;
+}
 /* Main Style Sheet */
 @font-face {
   font-family: 'titilliumregular';
@@ -343,6 +346,25 @@ figcaption a {
 }
 .post {
   border-top: 1px solid #777;
+  margin-top: 20px;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+tr:nth-of-type(odd) {
+  background: #f21d2f;
+}
+th {
+  background: #333;
+  color: white;
+  font-weight: bold;
+}
+td,
+th {
+  padding: 6px;
+  border: 1px solid #ccc;
+  text-align: left;
 }
 /*
  *
