--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <link href="/stylesheets/stylesheet.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <section class="container">
+    <section class="container-fluid">
       <!-- NAVBAR
       ================================================== -->
       <nav class="navbar navbar-matrix" role="navigation">
