--- a/_src/less/main.less
+++ b/_src/less/main.less
@@ -106,6 +106,15 @@ span {
 }
 }
 
+
+.navbar-toggle {
+margin-bottom: 34px;
+}
+
+
+
+
+
 .navbar-brand {
   font-family: 'titilliumregular',sans-serif;
   font-size: 2.4em;
@@ -141,6 +150,15 @@ span {
 
 
 
+@media screen and (max-width: 435px) {
+.navbar-header {
+
+span {
+  font-size: 1.6em;
+}
+}
+
+}
 
 
 @media screen and (min-width: 768px) {
