--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -15,6 +15,9 @@ button:focus {
     border-radius: 0px;
   }
 }
+.navbar-toggle {
+  margin-top: 0px;
+}
 .navbar-collapse {
   padding-right: 0px;
   padding-left: 0px;
@@ -153,6 +156,9 @@ a:hover {
   color: #f21d2f;
   font-size: 2.4em;
 }
+.navbar-toggle {
+  margin-bottom: 34px;
+}
 .navbar-brand {
   font-family: 'titilliumregular', sans-serif;
   font-size: 2.4em;
@@ -174,6 +180,11 @@ a:hover {
 .nav > li > a:hover,
 .nav > li > a:focus {
   background-color: rgba(100, 0, 0, 0.8);
+}
+@media screen and (max-width: 435px) {
+  .navbar-header span {
+    font-size: 1.6em;
+  }
 }
 @media screen and (min-width: 768px) {
   /* bootstrap reset */
