--- a/_src/less/main.less
+++ b/_src/less/main.less
@@ -159,6 +159,11 @@ span {
 
 }
 
+@media screen and (max-width: 767px) {
+.navbar-nav {
+margin: 7.5px 0px;
+}
+}
 
 @media screen and (min-width: 768px) {
 /* bootstrap reset */
