Navbar span line-height Added

--- a/_src/less/main.less
+++ b/_src/less/main.less
@@ -138,7 +138,10 @@ span {
 .active a {
   color: @red;
 }
-.nav li span { display:none !important; }
+.nav li span {
+  display:none !important;
+  line-height: 1;
+}
 
 
 
