Cleaning up Navbar @media screen

--- a/_src/less/main.less
+++ b/_src/less/main.less
@@ -154,17 +154,15 @@ span {
 
 @media screen and (max-width: 435px) {
 .navbar-header {
-
-span {
-  font-size: 1.18em;
+  span {
+    font-size: 1.18em;
+  }
 }
-}
-
 }
 
 @media screen and (max-width: 767px) {
 .navbar-nav {
-margin: 7.5px 0px;
+  margin: 7.5px 0px;
 }
 }
 
@@ -180,26 +178,21 @@ margin: 7.5px 0px;
   color: @red;
 }
 
-
-/*start media querie */
 .nav {
-
-li {
-  text-align: right;
-  margin-left: 28px;
-  font-size: 1.4em;
-}
-
-
-li span {
-  max-width: 100px;
-  font-size: 0.5em;
-  display:inherit !important;
-  color: #fff;
-}
+  li {
+    text-align: right;
+    margin-left: 28px;
+    font-size: 1.4em;
+  }
+  li span {
+    max-width: 100px;
+    font-size: 0.5em;
+    display:inherit !important;
+    color: #fff;
+  }
 }/* end .nav */
 
-}
+}/* end min-width: 768px */
 
 
 
