--- a/_src/less/variable.less
+++ b/_src/less/variable.less
@@ -1,1 +1,17 @@
+/*
+ *  WordPress Variables
+ */
+/*
+@font-src: ~'/wp-content/themes/ocultism/fonts/titillium-regular-webfont.eot';
+@font-src-embedded-opentype: ~'/wp-content/themes/ocultism/fonts/titillium-regular-webfont.eot?#iefix';
+@font-src-woff: ~'/wp-content/themes/ocultism/fonts/titillium-regular-webfont.woff';
+@font-src-truetype: ~'/wp-content/themes/ocultism/fonts/titillium-regular-webfont.ttf';
+@font-src-svg: ~'/wp-content/themes/ocultism/fonts/titillium-regular-webfont.svg#titilliumregular';
+*/
+
+/*
+ *  Variables
+ */
 @red:rgba(242,29,47,1);
+@fluid-max-width:100%;
+@fluid-max-height:100%;
