--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,4 +1,17 @@
 @charset "utf-8";
+/*
+ *  WordPress Variables
+ */
+/*
+@font-src: ~'/wp-content/themes/ocultism/fonts/titillium-regular-webfont.eot';
+@font-src-embedded-opentype: ~'/wp-content/themes/ocultism/fonts/titillium-regular-webfont.eot?#iefix';
+@font-src-woff: ~'/wp-content/themes/ocultism/fonts/titillium-regular-webfont.woff';
+@font-src-truetype: ~'/wp-content/themes/ocultism/fonts/titillium-regular-webfont.ttf';
+@font-src-svg: ~'/wp-content/themes/ocultism/fonts/titillium-regular-webfont.svg#titilliumregular';
+*/
+/*
+ *  Variables
+ */
 /* Override Hosted Cascading Style Sheets */
 .nav > li > a {
   padding: 10px 0px;
@@ -105,6 +118,9 @@ code {
   white-space: normal;
 }
 /* Main Style Sheet */
+/*
+ *  Fonts
+ */
 @font-face {
   font-family: 'titilliumregular';
   src: url('http://matrixfox.com/fonts/titillium-regular-webfont.eot');
@@ -112,21 +128,71 @@ code {
   font-weight: normal;
   font-style: normal;
 }
+/*
+ *  HTML Tags
+ */
 body {
   max-width: 1400px;
   margin-left: auto;
   margin-right: auto;
+  background: url('http://matrixfox.com/images/stressed_linen.png') center center;
+  background-color: #000;
+  color: #fff;
+  word-wrap: break-word;
+}
+img {
+  max-width: 100%;
+}
+iframe {
+  max-width: 100%;
+  margin-top: 10px;
+}
+input {
+  color: black;
+}
+textarea {
+  max-width: 100%;
+  color: black;
+}
+/* table */
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+/* table color clash */
+tr:nth-of-type(odd) {
+  background: #f21d2f;
+}
+th {
+  background: #333;
+  color: white;
+  font-weight: bold;
+}
+td,
+th {
+  padding: 6px;
+  border: 1px solid #ccc;
+  text-align: left;
+}
+/* font */
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: 'titilliumregular', sans-serif;
 }
 h2 {
   padding-bottom: 10px;
 }
-h5 {
-  font-family: 'titilliumregular', sans-serif;
+a {
+  color: #f21d2f;
+}
+a:hover {
+  color: white;
 }
 /*
- *
- * Home / Portfolio
- *
+ *  Home / Portfolio
  */
 body {
   background: url('/images/stressed_linen.png') center center;
@@ -142,14 +208,16 @@ a:hover {
   text-decoration: none;
 }
 /*
- * Navbar
- *
+ *  Navbar
  */
 .navbar-matrix {
   font-family: 'titilliumregular', sans-serif;
   text-transform: uppercase;
   border-bottom: 1px solid #eeeeee;
-  margin-top: 30px;
+  margin-top: 9px;
+  /* eye balling the lineheight bug */
+  margin-left: 15px;
+  margin-right: 15px;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
@@ -158,7 +226,26 @@ a:hover {
 }
 .navbar-matrix a {
   color: #fff;
+  text-decoration: none;
 }
+/*
+#branding {
+    line-height: 1;
+    h1 {
+        line-height: 1;
+    }
+
+  #site-title {
+    font-size: 36px;
+  }
+  #site-description {
+    color: @red;
+    font-size: 2em;
+    padding-bottom: 5px;
+
+  }
+}
+*/
 /* logo */
 .navbar-header span {
   color: #f21d2f;
@@ -176,17 +263,43 @@ a:hover {
 .navbar-toggle span {
   background-color: #f21d2f;
 }
+/*
+.current_page_item a {
+  color: @red;
+}
+
+/* hover effects
+.nav > li > a:hover,
+.nav > li > a:focus {
+  background-color: rgba(0,0,0,0);
+  color: @red;
+}
+
+/* tempStrap: until nav description tags
+.navbar-nav {
+  margin-top: 18px;
+}
+
+/* sidebar
+#s {
+  color: black;
+}
+
+*/
 .active a {
   color: #f21d2f;
-}
-.nav li span {
-  display: none !important;
-  line-height: 1;
 }
 .nav > li > a:hover,
 .nav > li > a:focus {
   background-color: rgba(100, 0, 0, 0.8);
 }
+.nav li span {
+  display: none !important;
+  line-height: 1;
+}
+/*
+ *  Navbar Media
+ */
 @media screen and (max-width: 435px) {
   .navbar-header span {
     font-size: 1.18em;
@@ -222,9 +335,23 @@ a:hover {
 }
 /* end min-width: 768px */
 /*
- *
- * Jumbotron
- *
+ *  WordPress Home
+ */
+/*
+.page-title {
+    font-size: 1.5em;
+    text-transform:uppercase;
+    margin-top: 10px;
+    margin-bottom: 10px;
+ /*   line-height: 1.25; fixes flicker bug
+
+    span {
+        color: @red;
+    }
+}
+*/
+/*
+ * Static Jumbotron
  */
 h4 {
   font-family: 'titilliumregular', sans-serif;
@@ -258,7 +385,6 @@ h4 span {
 }
 /*
  * BANNER
- *
  */
 .banner {
   background-color: #f21d2f;
@@ -295,18 +421,27 @@ h4 span {
 .open .dropdown-toggle.btn-default span {
   color: black;
 }
+/*
+ *  Banner Media
+ */
 @media screen and (min-width: 1200px) {
   .btn-default {
     margin-top: 38px;
   }
 }
 /*
- * Portfolio
- *
+ *  Portfolio
  */
 .portfolio {
   position: relative;
   overflow: hidden;
+}
+.portfolio:hover img {
+  /*  -webkit-filter: contrast(3) grayscale(1); causes chrome/safrai hover flicker */
+  transform: scale(1.1) rotate(2deg);
+}
+.portfolio:hover .overlay {
+  top: 0;
 }
 .overlay {
   position: absolute;
@@ -322,34 +457,22 @@ h4 span {
   text-align: center;
   transition: all 0.2s ease-in-out;
 }
-.portfolio:hover img {
-  /*  -webkit-filter: contrast(3) grayscale(1); causes chrome/safrai hover flicker */
-  transform: scale(1.1) rotate(2deg);
-}
-.portfolio:hover .overlay {
-  top: 0;
-}
 /*
- *
- * Footer
- *
+ *  Blog
  */
-footer {
-  clear: both;
-  border-top: 1px solid #fff;
-  padding-top: 20px;
-  margin-bottom: 20px;
-  margin-top: 20px;
-}
-footer small,
-footer p:nth-child(1) {
-  text-transform: uppercase;
-  color: #777;
-}
 /*
- *
- * Blog
- *
+.post:nth-of-type(odd) {
+  background: rgba(88,88,88,0.3);
+}
+.post {
+border-bottom: 1px solid #eeeeee;
+}
+.post:last-child {
+  border-bottom: 0px;
+}
+*/
+/*
+ *  Blog
  */
 figcaption a {
   display: inline-block;
@@ -377,9 +500,49 @@ th {
   text-align: left;
 }
 /*
- *
- * 404
- *
+ *  Contact
+ */
+/*
+h1.entry-title  {
+    font-size: 1.5em;
+    text-transform:uppercase;
+}
+*/
+/*
+ *  Footer
+ */
+/*
+#footer {
+  border-top: 1px solid #fff;
+  padding-top: 20px;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-bottom: 20px;
+
+#copyright, p:nth-child(1) {
+  text-transform:uppercase;
+  color: #777;
+  font-size: 0.8em;
+}
+}
+*/
+/*
+ *  Footer
+ */
+footer {
+  clear: both;
+  border-top: 1px solid #fff;
+  padding-top: 20px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+footer small,
+footer p:nth-child(1) {
+  text-transform: uppercase;
+  color: #777;
+}
+/*
+ *  404
  */
 .four04 img {
   max-width: 100%;
@@ -388,6 +551,69 @@ th {
 .four04 .h1 {
   font-size: 8em;
 }
+/* extras
+.show-grid {
+    padding-top: 10px;
+padding-bottom: 10px;
+background-color: #eee;
+background-color: rgba(86, 61, 124, .15);
+border: 1px solid #ddd;
+border: 1px solid rgba(86, 61, 124, .2)
+}
+*/
+/*
+ *  Media Queries
+ */
+/*
+/* banner
+@media screen and (min-width: 1200px) {
+.btn-default {
+  margin-top: 38px;
+  margin-bottom: 38px;
+}
+}
+*/
+/*
+redo
+*/
+/* sidebar */
+/*
+@media screen and (max-width: 989px) {
+#sidebar {
+  border-top: 1px solid #eeeeee;
+}
+}
+*/
+/* nav */
+/*
+@media screen and (max-width: 767px) {
+.nav li {
+  padding-bottom: 15px;
+}
+.nav li:last-child {
+  padding-bottom: 0px;
+}
+.navbar-nav {
+  margin: 7.5px 0px;
+}
+}
+
+@media screen and (min-width: 767px) {
+  .nav {
+  li {
+    text-align: right;
+    margin-left: 28px;
+    font-size: 1.4em;
+  }
+  li span {
+    max-width: 100px;
+    font-size: 0.5em;
+    display:inherit !important;
+    color: #fff;
+  }
+}
+}
+*/
 /* iPhone Media Queries */
 /* iPad Media Queries */
 /* Desktop Media Queries */
