--- a/_src/less/main.less
+++ b/_src/less/main.less
@@ -94,27 +94,6 @@ a:hover {
   font-size: ~"@{remValue}rem";
 }
 
-
-
-/*
- *  Home / Portfolio
- */
-body {
-  background: url('/images/stressed_linen.png') center center;
-  background-color: #000;
-  color: #fff;
-  word-wrap:break-word;
-}
-
-a {
-  color: @red;
-}
-a:hover {
-  color: #fff;
-  text-decoration: none;
-}
-
-
 /*
  *  Navbar
  */
@@ -262,7 +241,23 @@ span {
 
 }/* end min-width: 768px */
 
+/*
+ *  Home / Portfolio
+ */
+body {
+  background: url('/images/stressed_linen.png') center center;
+  background-color: #000;
+  color: #fff;
+  word-wrap:break-word;
+}
 
+a {
+  color: @red;
+}
+a:hover {
+  color: #fff;
+  text-decoration: none;
+}
 
 /*
  *  WordPress Home
@@ -335,6 +330,19 @@ span {
   padding: 20px;
 }
 
+//wordpress
+//.banner {
+//  background-color: @red;
+//}
+//
+//.banner-inner {
+//  padding: 20px;
+//
+//    h2 {
+//        text-transform:uppercase;
+//        color: #000;
+//    }
+//}
 
 .btn-default {
   margin-bottom: 20px;
