--- a/_src/less/main.less
+++ b/_src/less/main.less
@@ -60,9 +60,9 @@ table {
   border-collapse: collapse;
 }
 /* table color clash */
-tr:nth-of-type(odd) {
-  background: @red;
-}
+//tr:nth-of-type(odd) {
+//  background: @red;
+//}
 th {
   background: #333;
   color: white;
