Page Titles & Breadcrumbs

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,8 +26,10 @@ layout: default
 <h4>Current <span>Article</span></h4>
 
 <article>
+<section class="title">
 <h2>{{page.title}}</h2>
 <small>Posted: {{page.posted}}</small>
+</section>
 {{content}}
 <br>
     <section class="social">
