--- a/_src/less/main.less
+++ b/_src/less/main.less
@@ -78,9 +78,7 @@ td, th {
 h1, h2, h3, h4, h5 {
   font-family: 'titilliumregular',sans-serif;
 }
-h2 {
-  padding-bottom: 10px;
-}
+
 a {
   color: @red;
 }
@@ -257,6 +255,11 @@ a {
 a:hover {
   color: #fff;
   text-decoration: none;
+}
+
+.breadcrumb {
+    text-transform:uppercase;
+    padding-left: 0px;
 }
 
 /*
@@ -557,3 +560,7 @@ redo
 }
 }
 */
+
+.title {
+    padding-bottom: 25px;
+}
