--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,13 +23,11 @@ layout: default
 </ol>
 
 
-<h4>Current <span>Article</span></h4>
-
 <article>
-<section class="title">
-<h2>{{page.title}}</h2>
-<small>Posted: {{page.posted}}</small>
-</section>
+
+<h1>{{page.title}}</h1>
+<!--<small>Posted: {{page.posted}}</small>-->
+
 {{content}}
 <br>
     <section class="social">
