Removing Breadcrumb Bottom Margin

--- a/_src/less/reset.less
+++ b/_src/less/reset.less
@@ -71,6 +71,7 @@ border-radius: 0px;
 .breadcrumb {
   background-color: transparent;
   padding-left: 0px;
+  margin-bottom: 0px;
 }
 
 .breadcrumb>li+li:before {
