Fixed CORS Header Issue

--- a/_src/less/main.less
+++ b/_src/less/main.less
@@ -14,11 +14,11 @@
 
 @font-face {
     font-family: 'titilliumregular';
-    src: url('https://github.com/matrixfox/matrixfox.github.io/blob/master/fonts/titillium-regular-webfont.eot');
-    src: url('https://github.com/matrixfox/matrixfox.github.io/blob/master/fonts/titillium-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('https://github.com/matrixfox/matrixfox.github.io/blob/master/fonts/titillium-regular-webfont.woff') format('woff'),
-         url('https://github.com/matrixfox/matrixfox.github.io/blob/master/fonts/titillium-regular-webfont.ttf') format('truetype'),
-         url('https://github.com/matrixfox/matrixfox.github.io/blob/master/fonts/titillium-regular-webfont.svg#titilliumregular') format('svg');
+    src: url('http://matrixfox.com/fonts/titillium-regular-webfont.eot');
+    src: url('http://matrixfox.com/fonts/titillium-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('http://matrixfox.com/fonts/titillium-regular-webfont.woff') format('woff'),
+         url('http://matrixfox.com/fonts/titillium-regular-webfont.ttf') format('truetype'),
+         url('http://matrixfox.com/fonts/titillium-regular-webfont.svg#titilliumregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
