Adding .posted Class

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
 
 <article class="blog-post">
 	<h1>{{page.title}}</h1>
-  <small>Posted: {{page.posted}}</small>
+  <small class="posted">Posted: {{page.posted}}</small>
   {{content}}
   <br>
   <section class="social">
